# goit_web_hw_12

./: HW12.postman_collection.json  README.md  compose.yaml  example.env  pyproject.toml  requirements.txt  start.py
alembic/: env.py
alembic/versions/: 2a5689c85b35_usertoken_update.py  38e285dac575_avatar.py  65648f3bf18c_init.py  a7449cffdfe4_init.py
docs/: .buildinfo  conf.py
docs/documentation_build/doctrees/: environment.pickle
docs/documentation_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/documentation_build/html/_sources/: index.rst.txt
docs/documentation_build/html/_static/: alabaster.css  basic.css
docs_src/documentation_build/doctrees/: index.doctree
documentation/_static/: classic.css
src/: app_main.py  crud.py  database.py  main.py  models.py  schemas.py
src/auth/: auth.py  crud.py  mail.py  models.py  router.py  schemas.py
src/auth/templates/: email_template.html
src/contacts/: crud.py  models.py  router.py  schemas.py
tests/: test.db  test_contacts.py  test_contacts_router.py
